# friendly-enigma

./: .gitignore  Dockerfile  README.md  Statistics.ipynb  config.py  config.yaml  create_explanations.py  dashboard.py  docker-compose.yml  experiment1.sh  experiment2.sh  experiment4.sh  experiment5.sh  experiment6.sh  experiment6_continued.sh  experiment7.sh  generate_chvae.py  helocDataModule.py  helocDataset.py  hyper_parameter_search.py  main.py  minimal_example.py  model.py  multiTaskOutputWrapper.py  prune_dataset.py  pyproject.toml  requirements.txt  restart.py  single_task_learner.py  single_task_main.py  test_loaded_dataset.py  test_model.py
cchvae/: .gitignore  classifier-gmsc.ckpt  classifier-heloc.ckpt  main.py  pyproject.toml  report.txt
cchvae/code/: Decoder.py  Encoder.py  Evaluation.py  Generator.py  Graph.py  Helpers.py  LaugelEtAl.py  Loglik.py  Sampling.py
data/: cchvaeDataModule.py  cchvaeDataset.py  cchvae_aggregation.py  cchvae_split.py  explanationDataModule.py  explanationDataset.py  explanation_balance.py  gmscDataModule.py  gmscDataset.py  helocDataModule.py  helocDataset.py  mtlFakeDataModule.py  mtlFakeDataset.py  normalized_labels.py  partialDataModule.py  prune_dataset.py  shapley.py  stlFakeDataModule.py  stlFakeDataset.py  stlGmscDataModule.py  stlGmscDataset.py
data/dummy/: dummy_dataset_creator.py  dummyset.csv
data/fake/: cchvae_revert.py  cchvae_split_fake.py  fake_classifier.py  generateFakeData.py  generateOneHotExplanationsFromFake.py  test_stl.py
data/gmsc/: cchvae_split_gmsc.py  parse_training_dataset.py  shapley.py
data/heloc/: shapley.py
data/processing/: add_fake_task_to_counterfactuals.py  add_target_to_counterfactuals.py  heloc-epoch=07-loss_validate=8.05.ckpt  parameters.py
experiments_data/: exp1.py  exp4.py  exp5.py  exp6.py  exp7.py
learners/: single_task_learner.py
models/: core_model.py  genericLearner.py  multiTaskLearner.py  multiTaskOutputWrapper.py  singleTaskLearner.py  singleTaskOutputWrapper.py
runners/: Counterfactual_runner.py  GMSC_runner.py  MTL_Fake_runner.py  MTL_runner.py  PartialRunner.py  STL_Fake_runner.py  STL_GMSC_runner.py  STL_runner.py
slurms/: cchvae.slurm  mtl.slurm  prune-dataset.slurm  stl.slurm  tune-parameters.slurm
utils/: custom_torch.py  dashboard.py  minimal_example_helpers.py  print_colors.py  string2bool.py
visualisation/: AugmentedDeltaCountefractualsVisualized.ipynb  Exp7-GMSC&Heloc.ipynb  Experiment2.ipynb  FakeDataset.ipynb  GMSCData.ipynb  HelocWithExplanations.ipynb  Shapley.ipynb  Untitled.ipynb
