[tool.poetry]
name = "friendly-enigma"
version = "0.1.0"
description = "Master NTNU"
authors = ["Paalar <paaledward@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
pandas = "^1.1.3"
pytorch-lightning = "^1.0.4"
edc = {git = "https://github.com/FluidSense/edc.git"}
prompt-toolkit = "^3.0.8"
PyYAML = "^5.3.1"
ray = {extras = ["tune"], version = "^1.0.1"}
tabulate = "^0.8.7"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.18.0"
comet-ml = "^3.2.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
