[tool.poetry]
name = "c-chvae"
version = "0.1.0"
description = ""
authors = ["Paal Larsen <paaledward@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
sklearn = "^0.0"
tensorflow = "^2.4.1"
scipy = "^1.6.0"
tqdm = "^4.56.2"
recourse = "^1.0.0"
tensorflow-probability = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
